@startuml

title __GETRAENKE's Class Diagram__\n

  namespace getraenke {
    class getraenke.Apfelsaft {
        - truebung : String
        + Apfelsaft()
        + toString()
    }
  }
  

  namespace getraenke {
    abstract class getraenke.Getraenk {
        - volumen : float
        + Getraenk()
        + getVolumen()
        + toString()
    }
  }
  

  namespace getraenke {
    class getraenke.Kiwisaft {
        + Kiwisaft()
        + toString()
    }
  }
  

  namespace getraenke {
    class getraenke.Main {
        {static} + main()
    }
  }
  

  namespace getraenke {
    abstract class getraenke.Saft {
        - fruchtfleisch : boolean
        + Saft()
        + getFruchtfleisch()
        + toString()
    }
  }
  

  namespace getraenke {
    interface getraenke.Schuettelbar {
        + schütteln()
    }
  }
  

  namespace getraenke {
    class getraenke.Spirituose {
        - alkoholgehalt : float
        + Spirituose()
        + toString()
    }
  }
  

  namespace getraenke {
    class getraenke.Tequila {
        - farbe : String
        + Tequila()
        + toString()
    }
  }
  

  namespace getraenke {
    class getraenke.Wodka {
        - aroma : String
        + Wodka()
        + toString()
    }
  }
  

  getraenke.Apfelsaft -up-|> getraenke.Saft
  getraenke.Kiwisaft -up-|> getraenke.Saft
  getraenke.Saft .up.|> getraenke.Schuettelbar
  getraenke.Saft -up-|> getraenke.Getraenk
  getraenke.Spirituose -up-|> getraenke.Getraenk
  getraenke.Tequila -up-|> getraenke.Spirituose
  getraenke.Wodka -up-|> getraenke.Spirituose


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
